# Star-Trail-Cluster

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF-FINISH-PLAN.md  build_output.txt  readme.md
.claude/: launch.json
BenzCluster/: BenzCluster.ino  README.md  airplane.cpp  airplane.h  alttemp.cpp  alttemp.h  attitude.cpp  attitude.h  benz_logo.c  benz_logo.h  ble_media.cpp  ble_media.h  ble_notify.cpp  ble_notify.h  calibration.cpp  calibration.h  calibration_widget.cpp  calibration_widget.h  clock.cpp  clock.h  commands.cpp  commands.h  compass.cpp  compass.h  config.h  custom_screen.cpp  custom_screen.h  custom_widget.cpp  custom_widget.h  display.cpp  display.h  gforce.cpp  gforce.h  gps.cpp  gps.h  illuminati_logo.h  illuminati_text.h  ledcolor.cpp  ledcolor.h  leds.cpp  (+19 more)
Datasheet/: mpu9250-registers.md
Eagle_SCH&PCB/Layout-elecrow/: Layout-elecrow.kicad_prl  Layout-elecrow.kicad_pro  Layout-elecrow.kicad_sch
SensorDiag/: SensorDiag.ino
example/: CST816D.cpp
example/ESP32_Display_1_28/: ESP32_Display_1_28.ino
example/GitMate/: CST816D.cpp  CST816D.h  GitMate.ino  INSTALL.md  README_GITMATE.md  build_log.txt  config.h  encoder_handler.cpp  encoder_handler.h  git_commands.cpp  git_commands.h  led_controller.cpp  led_controller.h  network_client.cpp  network_client.h  platformio.ini  touch_handler.cpp  touch_handler.h  ui_manager.cpp  ui_manager.h
example/RotaryScreen_1_28_new/: RotaryScreen_1_28_new.ino  huge_app_5mb.csv  ui.c  ui.h  (+14 more)
flutter_app/: .metadata  README.md  pubspec.yaml
simulator/: Arduino.h  CMakeLists.txt  build_sim.bat  lv_conf.h  main.cpp
(+168 files in other folders)
